Minor change in syntax error